--- a/box.html
+++ b/box.html
@@ -231,6 +231,17 @@ input[type=submit], input[type=reset] {
     
    </form>
 
+   <div class="flexc">
+    <div>A</div>
+    <div>B</div>
+    <div>C</div>
+    <div>D</div>
+    <div>A</div>
+    <div>B</div>
+    <div>C</div>
+    <div>D</div>
+   </div>
+
   
 </body>
 </html>
