--- a/wrk2.html
+++ b/wrk2.html
@@ -20,7 +20,7 @@
             
         }
         .dmain>div{
-            background-color: #f1f1f1;
+            background-color: #74a8af;
     margin: 10px;
     padding: 10px;
     flex-grow: 1;
@@ -76,21 +76,21 @@
              <img src="pic1.jpg" alt=""> 
             </div>
             <div >
-                PORSCHE 911<br>The Porsche 911 is a two-door high performance rear-engined sports car introduced in September 1964 by Porsche
+                PORSCHE 911<br><br>The Porsche 911 is a two-door high performance rear-engined sports car introduced in September 1964 by Porsche
             </div>
         
         </div>
         <div class="sb2">
             <div style="width: 450px;"> <img  src="pic2.avif" alt=""> </div>
             <div>
-                PORSCHE TAYCAN <br>
+                PORSCHE TAYCAN <br><br>
                 The Porsche Taycan is a battery electric luxury sports sedan and shooting brake car produced by German automobile manufacturer Porsche.
             </div>
         </div>
         <div class="sb3">
             <div style="width: 490px;"> <img src="pic3.webp" alt=""> </div>
             <div>
-                PORSCHE PANAMERA <br>The Porsche Panamera is a mid- to full-sized luxury car (E-segment or F-segment for LWB in Europe) manufactured and marketed by German automobile manufacturer Porsche.[1][2][3] It currently spans across three generations, using a front-engine, rear or all-wheel drive configuration.
+                PORSCHE PANAMERA <br><br>The Porsche Panamera is a mid- to full-sized luxury car (E-segment or F-segment for LWB in Europe) manufactured and marketed by German automobile manufacturer Porsche.[1][2][3] It currently spans across three generations, using a front-engine, rear or all-wheel drive configuration.
 
             </div>
         </div>
