--- a/box.html
+++ b/box.html
@@ -14,6 +14,10 @@
 
             
         }
+        .full{
+            display: flex;
+            flex-wrap: wrap;
+        }
         .ov{
             height: 150px;
             width: 200px;
@@ -142,6 +146,11 @@ input[type=submit], input[type=reset] {
   margin: 4px 2px;
 
 }
+@media screen and (max-width: 700px) {
+  .full,ul{   
+    flex-direction: column;
+  }
+}
     </style>
 </head>
 <body>
@@ -163,7 +172,7 @@ input[type=submit], input[type=reset] {
     <li> <a href="">CONTACT</a></li>
     <li><a href="">ABOUT</a></li>
 </ul> 
-
+<div class="full">
 <form class="sch">
     <input type="text" name="search" placeholder="Search..">
   </form>
@@ -253,7 +262,7 @@ input[type=submit], input[type=reset] {
     <div>D</div> -->
    </div>
 
-  
+</div>
 </body>
 </body>
 </html>
